# MicrosoftHostsPicker

./: .gitignore  MicrosoftHostsPicker.py  README.md  README_CN.md  config.py  pyproject.toml
web/: index.html  styles.css
