[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MicrosoftHostsPicker"
version = "0.0.1"
description = "A lightweight Python script to help you select the fastest IP addresses for Microsoft services."
authors = [
  { name = "Wenjie Xu", email = "wenjie.xu.cn@outlook.com" },
  { name = "ButaiKirin", email = "github@hee.ink" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["ping3==4.0.4"]
requires-python = "~=3.12.0"

[tool.ruff]
line-length = 99
src = ["."]
include = ["pyproject.toml", "*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting
isort = { known-first-party = [
    "MicrosoftHostsPicker",
], force-sort-within-sections = true }
